# Zane-Compiler

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  autorun.sh  devbox.json  embed_data.cmake  embed_data.py  embed_types.cmake  embedded_data.hpp  go.mod  go.sum  justfile  main.go  makefile  meson.build  notes.md  roadmap.md  test.txt  todo.md  upx_pack.cmake  upx_pack.py  vcpkg.json
.github/workflows/: ci.yml  copilot-setup-steps.yml
cpp-ir-tests/: string.cpp
data/: builtins.csv  providers.coda  types.csv
generated-parser/parser/: Zane.interp  Zane.tokens  ZaneBaseListener.cpp  ZaneBaseListener.h  ZaneBaseVisitor.cpp  ZaneBaseVisitor.h  ZaneLexer.cpp  ZaneLexer.h  ZaneLexer.interp  ZaneLexer.tokens  ZaneListener.cpp  ZaneListener.h  ZaneParser.cpp  ZaneParser.h  ZaneVisitor.cpp  ZaneVisitor.h
generated_parser/: Zane.interp  ZaneLexer.interp  ZaneLexer.tokens  zane.interp  zane.tokens  zaneLexer.interp  zane_base_listener.go  zane_lexer.go  zane_listener.go  zane_parser.go
instructions/: instructions.go
ir-tests/llvm/: run.sh  test  test.ll
ir-tests/wat/: run.sh  test.wasm  test.wat
lexer/: lexer.go  token.go
parser/: Zane.g4  generate.sh  zane.g4
parsergen/: parsergen.go
preprocessor/: preprocessor.go
roadmap/: dep-mngmnt.md
scripts/: embed_data.py  llvm.sh  setup.sh  setup_antlr4.py  upx_pack.py
src/: example.cpp  macros.hpp  main.cpp  types.hpp
src/ast/: ASTNode.hpp  ast_helpers.hpp  symbol_collector.hpp  type_enforcer.hpp  visitor.hpp
src/cli/: cli.hpp  commands.hpp  constants.hpp  help.hpp  manifest.hpp  repl.hpp  template.hpp
src/codegen/: llvm.hpp  type_mapper.hpp  visitor.hpp
src/compiler/: compiler.cpp  compiler.hpp  compiler_build.cpp  compiler_dependencies.cpp  compiler_old.hpp  toolchain.hpp  zig_toolchain.hpp
src/globals/: constants.cpp  constants.hpp  mangling.cpp  mangling.hpp  package_cache.cpp  package_cache.hpp  paths.cpp  paths.hpp  project_templates.cpp  project_templates.hpp  targets.cpp  targets.hpp
src/ir/: node.hpp  nodes.cpp  nodes.hpp
src/package/: package.cpp  package.hpp  package_cache.cpp  package_codegen.cpp  package_parse.cpp  parser_context.cpp  parser_context.hpp
src/parser/: Zane.interp  ZaneBaseListener.h  ZaneBaseVisitor.h  ZaneLexer.cpp  ZaneLexer.h  ZaneLexer.interp  ZaneLexer.tokens  ZaneListener.h  ZaneParser.cpp  ZaneParser.h  ZaneVisitor.h
src/sema/: ASTBuilder.hpp
src/utils/: aliases.hpp  console.hpp  embedded_types.hpp  file_io.hpp  notify.hpp  print.hpp  shell.hpp  string.hpp  types.hpp  utils.hpp
src/visitor/: context.hpp  visitor.hpp
test/: a.out  llvm.ll  zane.coda  zane.json
test/.dev/linux-x64/: test
test/biggerbooger/: zane.json
test/biggerbooger/src/: main.zn
test/biggerbooger/test/: main.zn
test/src/: b.zn  main.zane  main.zn  test.zn
test/src/helper/: helper.zn
tools/: prettify.py
types/: types.go
